# dog

./: README.md  csv_to_tum.py  db3_to_csv.py  imu_data.txt  laser_1.py  move_test.py  py.py  说明书.md
install/: local_setup.sh  setup.sh
install/laser/lib/laser/: laser  laser_position
install/laser/share/laser/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_bringup/share/ament_index/resource_index/package_run_dependencies/: my_robot_bringup
install/my_robot_bringup/share/ament_index/resource_index/parent_prefix_path/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_bringup/share/my_robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_bringup/share/my_robot_bringup/launch/: my_robot.launch.py  my_robot_gazebo.launch.xml  wheel_test.launch.py
install/my_robot_bringup/share/my_robot_bringup/rviz/: urdf_config.rviz
install/my_robot_bringup/share/my_robot_bringup/src/: robot_controller.py
install/my_robot_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_description
install/my_robot_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_description
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/config/: joint_names_舵轮底盘0.yaml
install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_description/share/my_robot_description/launch/: control.launch.py  display.launch.xml  load_world.launch.py  load_world.launch.xml
install/my_robot_description/share/my_robot_description/meshes/: base_link.STL  wheel1.STL  wheel1_1.STL  wheel2.STL  wheel2_2.STL  wheel3.STL  wheel3_3.STL
install/my_robot_description/share/my_robot_description/models/: model.config  robot.model
install/my_robot_description/share/my_robot_description/models/RoboCon25_Field/: model.config  model.sdf
install/my_robot_description/share/my_robot_description/models/basketball/: basketball.sdf  model.config  model.dae
install/my_robot_description/share/my_robot_description/models/hoop1/: hoop.sdf  model.config  model.dae
install/my_robot_description/share/my_robot_description/models/hoop2/: hoop.sdf  model.config  model.dae
install/my_robot_description/share/my_robot_description/models/hoopC/: model.config  model.dae
install/my_robot_description/share/my_robot_description/rviz/: urdf_config.rviz
install/my_robot_description/share/my_robot_description/urdf/: color.xacro  common_inertia.xacro  my_robot.urdf.xacro  my_robot.urdf1.xacro  my_robot.urdf_bak.xacro  my_robot.urdf_bak1.xacro  myrobot_ros2_control.xacro  舵轮底盘0.csv
install/my_robot_description/share/my_robot_description/urdf/actuator/: wheel.urdf.xacro
install/my_robot_description/share/my_robot_description/urdf/plugin/: imu_plugin copy.xacro  imu_plugin.xacro  laser_plugin.xacro  laser_plugin_single.xacro
install/my_robot_description/share/my_robot_description/urdf/sensor/: imu.urdf copy.xacro  imu.urdf.xacro  laser.urdf.xacro  (+1 more)
install/my_robot_description/share/my_robot_description/worlds/: basketball.world  new_vision.world  robocon25.world
install/myrobot_controller/include/include/myrobot_controller/: simple_controller.hpp
install/myrobot_controller/lib/myrobot_controller/: simple_controller
install/myrobot_controller/share/myrobot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/myrobot_controller/share/myrobot_controller/cmake/: myrobot_controllerConfig-version.cmake  myrobot_controllerConfig.cmake
install/myrobot_controller/share/myrobot_controller/config/: joy_config.yaml  joy_teleop.yaml  myrobot_controllers.yaml
install/myrobot_controller/share/myrobot_controller/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/myrobot_controller/share/myrobot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
log/: latest_build
pose_data/: metadata.yaml  pose_data_0.db3
src/ares_comm/: CMakeLists.txt  CMakeLists.txt.backup  aresLink_UART.md  package.xml
src/ares_comm/include/ares_comm/: crc.hpp  protocol_parser.hpp  serial_interface.hpp
src/ares_comm/launch/: ares_comm.launch.py  ares_control.launch.py  imu_sensor.launch.py
src/ares_comm/msg/: Data.msg  Error.msg
src/ares_comm/src/: ares_comm_node.cpp  ares_control_node.cpp  crc.cpp  imu_sensor_node.cpp  protocol_parser.cpp  quaternion_receiver_node.cpp  serial_interface.cpp
src/ares_comm/srv/: Execute.srv
src/custom_geometry_msgs/: CMakeLists.txt  package.xml
src/custom_geometry_msgs/msg/: PlanarPose.msg
src/custom_geometry_msgs/src/: planar_pose_publisher.cpp
src/laser/: package.xml  setup.py
src/laser/config/: default.yaml  params.yaml
src/laser/laser/: Real.py  Trapezoidal.py  get.py  laser.py  pid.py  ros2publisher.py  test.py  transformation.py
src/laser/launch/: all_nodes.launch.py  laser_launch.py  laser_test.py
src/laser_interfaces/: CMakeLists.txt  package.xml
src/laser_position/: CMakeLists.txt  package.xml
src/laser_position/msg/: LaserPosition.msg
src/log/: latest_build
src/my_robot_bringup/launch/: my_robot.launch.py
src/omni_mpc_controller/: package.xml  setup.py
src/omni_mpc_controller/config/: params.yaml
src/omni_mpc_controller/launch/: MPC_and_keyboard.py
src/omni_mpc_controller/omni_mpc_controller/: MPC.py
src/omni_mpc_controller/test/: MPC_2.0 copy.py  MPC_2.0_matploylib.py
src/usb_bulk_node/: CMakeLists.txt
src/usb_bulk_node/src/: usb_bulk_node.cpp
(+15 files in other folders)
